appId: org.reactjs.native.example.FIXYZMob
---
- launchApp:
    clearState: true
    clearKeychain: true
    arguments:
      mobApiBaseUrl: http://localhost:18080
      mobDisableAnimations: true
- extendedWaitUntil:
    visible:
      id: login-email
    timeout: 20000
- tapOn:
    id: login-email
- waitForAnimationToEnd:
    timeout: 5000
- inputText: demo@fix.com
- waitForAnimationToEnd:
    timeout: 1000
- tapOn:
    id: login-password
- waitForAnimationToEnd:
    timeout: 5000
- inputText: Test1234!
- waitForAnimationToEnd:
    timeout: 2000
